04-Security-And-Policies/homework/np-cons.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-cons
spec:
  podSelector:
    matchLabels:
      role: consumer
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: client
