04-Security-And-Policies/homework/np-prod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-prod
spec:
  podSelector:
    matchLabels:
      role: producer
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: consumer
